--- a/index.html
+++ b/index.html
@@ -43,23 +43,32 @@
         </div>
     </header>
     <main>
-        <section class="hero container">
-            <ul class="hero-list list">
-                <li class="hero-item">
-                    <a class="hero-link link" href target="_blank" rel="noopener noreferrer nofollow">Instagram</a>
-                </li>
-                <li class="hero-item">
-                    <a class="hero-link link" href target="_blank" rel="noopener noreferrer nofollow">Youtube</a>
-                </li>
-            </ul>
-            <p class="hero-pre-title pre-title">A hair salon for men in Kyiv</p>
-            <h1 class="hero-title">BarberShop</h1>
-            <p class="hero-after-title">
+        <section class="hero ">
+            <div class="hero-container container">
+            <div class="hero-soc">
+                <ul class="hero-list list">
+                    <li class="hero-item">
+                        <a class="hero-link link" href target="_blank" rel="noopener noreferrer nofollow">Instagram</a>
+                    </li>
+                    <li class="hero-item">
+                        <a class="hero-link link" href target="_blank" rel="noopener noreferrer nofollow">Youtube</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="hero-wrap">
+                <p class="hero-pre-title pre-title">A hair salon for men in Kyiv</p>
+                <h1 class="hero-title">BarberShop</h1>
+                <p class="hero-after-title">
                 We are experts in trendy men’s haircuts. We work quickly, carefully
                 and with style.
             </p>
+            </div>
+            </div>
         </section>
-        <section class="about container">
+       
+        <section class="about">
+            <div class="container about-container">
+               
             <ul class="about-list list">
                 <li class="about-item">
                     <img class="about-pic" src="./images/about-img-1.jpg" alt="haircut process" width="270"
@@ -70,6 +79,7 @@
                         height="445" />
                 </li>
             </ul>
+            <div class="about-content">
             <p class="about-pre-title pre-title">About</p>
             <h2 class="about-title title">Best Barbershop in your city</h2>
             <p class="about-after-title">
@@ -84,12 +94,16 @@
                 everyone who comes to us!
             </p>
             <button class="about-btn btn" type="button">Online-booking</button>
+            </div>
+            </div>
         </section>
-        <section class="prices container">
+        <section class="prices">
+            <div class="container">
             <p class="prices-pre-title pre-title">
                 Spend your time with the best masters
             </p>
             <h2 class="prices-title title">Services and prices</h2>
+            <div class="prices-content">
             <ul class="prices-list list">
                 <li class="prices-item">
                     <p class="prices-item-text">Men’s haircut</p>
@@ -126,7 +140,9 @@
                     <p class="prices-item-text">from 200 uah.</p>
                 </li>
             </ul>
+            </div>
             <button class="prices-btn btn" type="button">Online-booking</button>
+            </div>
         </section>
         <section class="benefits container">
             <ul class="benefits-list list">
@@ -189,16 +205,16 @@
             <h2 class="hidden">Gallery</h2>
             <ul class="gallery-list list">
                 <li class="gallery-item">
-                    <img src="./images/gallery-img-1.jpeg" alt="barbers gallery" width="270" height="360" />
+                    <img src="./images/Rectangle 25 (1).jpg" alt="barbers gallery" width="270" height="360" />
                 </li>
                 <li class="gallery-item">
-                    <img src="./images/gallery-img-2.jpeg" alt="barbers gallery" width="270" height="360" />
+                    <img src="./images/Rectangle 26 (1).jpg" alt="barbers gallery" width="270" height="360" />
                 </li>
                 <li class="gallery-item">
-                    <img src="./images/gallery-img-3.jpeg" alt="barbers gallery" width="270" height="360" />
+                    <img src="./images/Rectangle 27 (1).jpg" alt="barbers gallery" width="270" height="360" />
                 </li>
                 <li class="gallery-item">
-                    <img src="./images/gallery-img-4.jpeg" alt="barbers gallery" width="270" height="360" />
+                    <img src="./images/Rectangle 28 (1).jpg" alt="barbers gallery" width="270" height="360" />
                 </li>
             </ul>
         </section>
