--- a/index.html
+++ b/index.html
@@ -144,14 +144,12 @@
             <button class="prices-btn btn" type="button">Online-booking</button>
             </div>
         </section>
-        <section class="benefits container">
+        <section class="benefits">
+            <div class="benefits-container container">
             <ul class="benefits-list list">
                 <li class="benefits-item">
                     <span>600</span>
                     <p class="benefits-item-text">Satisfied customers per day</p>
-                    <div>
-                        <span>test</span>
-                    </div>
                 </li>
                 <li class="benefits-item">
                     <span>50</span>
@@ -166,12 +164,15 @@
                     <p class="benefits-item-text">Gifts for regular customers</p>
                 </li>
             </ul>
+            <div>
             <p class="benefits-pre-title pre-title">Old traditional school</p>
             <h2 class="benefits-title title">¿Why people come to us?</h2>
             <p class="benefits-after-title">
                 Only good things are said about us. But it's better to see and feel 1
                 time than read 10 times.
             </p>
+            </div>
+            </div>
         </section>
         <section class="barbers" id="barbers">
             <div class="container">
@@ -182,23 +183,122 @@
             <ul class="barbers-list list">
                 <li class="barbers-item">
                     <img src="./images/barbers-img-1.jpg" alt="barber picture" width="370" height="346" />
+                    <div class="barbers-containe">
                     <h3 class="barbers-item-title">John Smith</h3>
                     <p class="barbers-item-text">Extreme Barber</p>
+                    <ul class="soc-list list">
+                        <li class="soc-item">
+                            <a class="soc-link" href="">
+                            <svg class="soc-svg" width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-instagram-2"><use>
+                            </svg>
+                            </a>
+                    </li>
+                    <li class="soc-item">
+                        <a class="soc-link" href="">
+                            <svg class="soc-svg" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="soc-item">
+                        <a class="soc-link" href="">
+                            <svg class="soc-svg" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="soc-item">
+                        <a class="soc-link" href="">
+                            <svg class="soc-svg" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    </ul>
+                    </div>
                 </li>
                 <li class="barbers-item">
                     <img src="./images/barbers-img-2.jpg" alt="barber picture" width="370" height="346" />
+                    <div class="barbers-containe">
                     <h3 class="barbers-item-title">Michele Doe</h3>
                     <p class="barbers-item-text">Extreme Barber</p>
+                    <ul class="soc-list list">
+                        <li class="soc-item">
+                            <a class="soc-link" href="">
+                                <svg class="soc-svg" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-instagram-2">
+                                        <use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-item">
+                            <a class="soc-link" href="">
+                                <svg class="soc-svg" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-item">
+                            <a class="soc-link" href="">
+                                <svg class="soc-svg" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-item">
+                            <a class="soc-link" href="">
+                                <svg class="soc-svg" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                    </div>
                 </li>
                 <li class="barbers-item">
                     <img src="./images/barbers-img-3.jpg" alt="barber picture" width="370" height="346" />
+                    <div class="barbers-containe">
                     <h3 class="barbers-item-title">Alan Black</h3>
                     <p class="barbers-item-text">Extreme Barber</p>
+                    <ul class="soc-list list">
+                        <li class="soc-item">
+                            <a class="soc-link" href="">
+                                <svg class="soc-svg" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-instagram-2">
+                                        <use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-item">
+                            <a class="soc-link" href="">
+                                <svg class="soc-svg" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-item">
+                            <a class="soc-link" href="">
+                                <svg class="soc-svg" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-item">
+                            <a class="soc-link" href="">
+                                <svg class="soc-svg" width="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                    </div>
                 </li>
             </ul>
             </div>
         </section>
-        <section class="gallery container">
+        <section class="gallery">
+            <div class="container">
             <p class="gallery-pre-title pre-title">
                 In Latin, "barba" means "beard"
             </p>
@@ -217,8 +317,18 @@
                     <img src="./images/Rectangle 28 (1).jpg" alt="barbers gallery" width="270" height="360" />
                 </li>
             </ul>
+            </div>
         </section>
     </main>
+    <footer>
+        <p>Online-booking</p>
+        <form action="">
+            <input type="text">
+            <input type="text">
+            <input type="text">
+            <button></button>
+        </form>
+    </footer>
 </body>
 
 </html>
